src/iocc/tests/ui/fail/component-attribute-arguments.rs
use iocc::prelude::*;

struct Test;

#[component(Box<Test>)]
impl Test {}

fn main() {}
